--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
   <title>Masajes Tarima</title>
 
 </head>
 
 <body>
-  <h1>Masajes</h1>
-  
-  <script>
-    Calendly.initInlineWidget({
-      url: 'https://calendly.com/masajes-tarima'});
-  </script>
-  <div id="calendly"></div>
-  
+  <h1>Masajes Tarima</h1>
+
+
 
 
   <div class="info contenedor ">
-    <h class="infoh"> Reserva hoy tu masaje:</h>
-    <p>
-      <a href=" https://calendly.com/masajes-tarima">Reservar mi turno Online </a>
-    
 
-    <p>Por cualquier consulta puede contactarme por Whatsapp a +54 1130912600  </p>
+
+
+    <script>
+      Calendly.initInlineWidget({
+        url: 'https://calendly.com/masajes-tarima'
+      });
+    </script>
+
+    <div id="calendly"></div>
+
+
+    <h class="infoh"> Reserva hoy tu masaje:</h>
+    <!-- <p>
+      <a href=" https://calendly.com/masajes-tarima">Reservar mi turno Online </a>
+ -->
+
+    <p> Para reservar turno online puede hacerlo aquí mismo </p>
+    <p>Por cualquier consulta puede contactarme por Whatsapp a +54 1130912600 </p>
 
     <p class='contenedor1'> Horarios de atención:
       Lunes a Viernes 10 a 16hs y 17.30 a 20hs. Sabados 10 a 20hs.
@@ -41,35 +49,42 @@
     </p>
     <p> Te espero !!!</p>
   </div>
+
+  <h1 style="display: block; padding: 500px; margin: 500px;"> Reserve aquí su próximo turno:</h1>
+
+  <div style=" 
+  /* display: none; */
+  height: 1px;
   
-  <div style=" display: none; ">
-  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-  <div id="calendly"></div>
-  <div class="calendly-inline-widget" style="height: 1000px;"></div>
-</div>
-<!-- 
+  ">
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <div id="calendly"></div>
+    <div class="calendly-inline-widget" style="height: 1000px;"></div>
+    <div style="height: 1000px;">
+      <script>
+
+        Calendly.initInlineWidget({
+          url: 'https://calendly.com/masajes-tarima'
+        });
+
+      </script>
+    </div>
+  </div>
+  <!-- 
   <script>
     Calendly.initInlineWidget({
       url: 'https://calendly.com/masajes-tarima'
     }); 
   </script> -->
-  
+
 
   <!-- Funciona... -->
-<!-- 
+  <!-- 
   <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
   <div id="calendly"></div>
 
   <div class="calendly-inline-widget" style="min-width:320px;height:580px;" data-auto-load="false"></div> -->
-<div style="height: 1000px;">
-  <script>
 
-    Calendly.initInlineWidget({
-      url: 'https://calendly.com/masajes-tarima'});
-
-  </script>
-  
-</div>
   <!-- Funciona... -->
 
 
