--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <h1>Masajes</h1>
+  <h1 class="header">Masajes Tarima</h1>
   
   <script>
     Calendly.initInlineWidget({
@@ -27,6 +27,7 @@
 
 
   <div class="info contenedor ">
+    <div class="info-text" >
     <h class="infoh"> Reserva hoy tu masaje:</h>
     <p>
       <p> Para reservar turno online puede hacerlo aquí mismo </p>
@@ -39,6 +40,7 @@
       Ubicacion: Florida, Vicente Lopez, a unas cuadras de la estacion Florida Tren Mitre.
     </p>
     <p> Te espero !!!</p>
+  </div>
   </div>
   
   <div style=" display: none; ">
@@ -60,7 +62,7 @@
   <div id="calendly"></div>
 
   <div class="calendly-inline-widget" style="min-width:320px;height:580px;" data-auto-load="false"></div> -->
-<h1> Reserve aquí su próximo turno:</h1>
+<h1 class="header"> Reserve aquí su próximo turno:</h1>
   <div style="height: 1000px;">
   <script>
 
